Fix text alignment when cover width fluctuate (or no cover is found)

--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ margin-left: 10px;
 {
 float:left;
 padding:5px 10px;
+min-width: 56px;
 }
 
 .download
